--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,9 @@
           <a href="#">Work</a>
           <a href="#">About</a>
           <a href="#">Contact</a>
+          <a href="#">Work</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
         </nav>
       </div>
     </main>
